// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckBoxInput renders a disabled input 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 fEWbpp"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 bmLMm"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 gblWrj FormField__FormFieldBox-sc-m9hood-0 chvcoo CheckBoxInput__StyledFormField-sc-16fe619-0 fRSA-Dq"
      tabindex="0"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 hqVIvd FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <label
          class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 igLsYG"
          disabled=""
          label="Some input"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 AvGir StyledCheckBox-sc-1dbk5ju-6 dsgBHs"
            disabled=""
          >
            <input
              class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 cnVXPu"
              disabled=""
              tabindex="-1"
              type="checkbox"
              value="Hi people"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 kSJcPV StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 cEWJED"
              disabled=""
            />
          </div>
          <span>
            Some input
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`CheckBoxInput renders a simple input 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 fEWbpp"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 bmLMm"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 gblWrj FormField__FormFieldBox-sc-m9hood-0 chvcoo CheckBoxInput__StyledFormField-sc-16fe619-0 fRSA-Dq"
      tabindex="0"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 hqVIvd FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <label
          class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 fvGmiH"
          label="Some input"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 AvGir StyledCheckBox-sc-1dbk5ju-6 dsgBHs"
          >
            <input
              class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 cTkXuO"
              tabindex="-1"
              type="checkbox"
              value="Hi people"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 kSJcPV StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 cEWJED"
            />
          </div>
          <span>
            Some input
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`CheckBoxInput renders a toggle input 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 fEWbpp"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 bmLMm"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 gblWrj FormField__FormFieldBox-sc-m9hood-0 chvcoo CheckBoxInput__StyledFormField-sc-16fe619-0 fRSA-Dq"
      tabindex="0"
    >
      <label
        class="StyledText-sc-1sadyjn-0 gGKbiL"
      >
        A checkbox
      </label>
      <span
        class="StyledText-sc-1sadyjn-0 iSRQOX"
      >
        A helpful message
      </span>
      <div
        class="StyledBox-sc-13pk1d4-0 hqVIvd FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <label
          class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 fvGmiH"
          label="Hi friends"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 AvGir StyledCheckBox-sc-1dbk5ju-6 dsgBHs"
          >
            <input
              class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 cTkXuO"
              tabindex="-1"
              type="checkbox"
            />
            <span
              class="StyledCheckBox__StyledCheckBoxToggle-sc-1dbk5ju-4 bkvJCF"
            >
              <span
                class="StyledCheckBox__StyledCheckBoxKnob-sc-1dbk5ju-5 fYUqXa"
              />
            </span>
          </div>
          <span>
            Hi friends
          </span>
        </label>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 fWPyPA"
      >
        Some info
      </span>
    </div>
  </div>
</div>
`;

exports[`CheckBoxInput renders an input with a form field label 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 fEWbpp"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 bmLMm"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 gblWrj FormField__FormFieldBox-sc-m9hood-0 chvcoo CheckBoxInput__StyledFormField-sc-16fe619-0 fRSA-Dq"
      tabindex="0"
    >
      <label
        class="StyledText-sc-1sadyjn-0 gGKbiL"
      >
        A brilliant input
      </label>
      <div
        class="StyledBox-sc-13pk1d4-0 hqVIvd FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <label
          class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 fvGmiH"
          label="Some input"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 AvGir StyledCheckBox-sc-1dbk5ju-6 dsgBHs"
          >
            <input
              class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 cTkXuO"
              tabindex="-1"
              type="checkbox"
              value="Hi people"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 kSJcPV StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 cEWJED"
            />
          </div>
          <span>
            Some input
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`CheckBoxInput renders an input with a help message 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 fEWbpp"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 bmLMm"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 gblWrj FormField__FormFieldBox-sc-m9hood-0 chvcoo CheckBoxInput__StyledFormField-sc-16fe619-0 fRSA-Dq"
      tabindex="0"
    >
      <span
        class="StyledText-sc-1sadyjn-0 iSRQOX"
      >
        This is a very cool input
      </span>
      <div
        class="StyledBox-sc-13pk1d4-0 hqVIvd FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <label
          class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 fvGmiH"
          label="Some input"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 AvGir StyledCheckBox-sc-1dbk5ju-6 dsgBHs"
          >
            <input
              class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 cTkXuO"
              tabindex="-1"
              type="checkbox"
              value="Hi people"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 kSJcPV StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 cEWJED"
            />
          </div>
          <span>
            Some input
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`CheckBoxInput renders an input with a validation error 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 fEWbpp"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 bmLMm"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 gblWrj FormField__FormFieldBox-sc-m9hood-0 chvcoo CheckBoxInput__StyledFormField-sc-16fe619-0 fRSA-Dq"
      tabindex="0"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 hqVIvd FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <label
          class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 fvGmiH"
          label="Some input"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 AvGir StyledCheckBox-sc-1dbk5ju-6 dsgBHs"
          >
            <input
              class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 cTkXuO"
              tabindex="-1"
              type="checkbox"
              value="Hi people"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 kSJcPV StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 cEWJED"
            />
          </div>
          <span>
            Some input
          </span>
        </label>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 OmJsh"
      >
        You failed at this
      </span>
    </div>
  </div>
</div>
`;

exports[`CheckBoxInput renders an input with an info message 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 fEWbpp"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 bmLMm"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 gblWrj FormField__FormFieldBox-sc-m9hood-0 chvcoo CheckBoxInput__StyledFormField-sc-16fe619-0 fRSA-Dq"
      tabindex="0"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 hqVIvd FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <label
          class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 fvGmiH"
          label="Some input"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 AvGir StyledCheckBox-sc-1dbk5ju-6 dsgBHs"
          >
            <input
              class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 cTkXuO"
              tabindex="-1"
              type="checkbox"
              value="Hi people"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 kSJcPV StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 cEWJED"
            />
          </div>
          <span>
            Some input
          </span>
        </label>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 fWPyPA"
      >
        You can set a cool value
      </span>
    </div>
  </div>
</div>
`;
